Início do formulário e da estilização

--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="/assets/styles/style.css">
     <title>Formulário em Dupla</title>
 </head>
 <body>
-    
+    <form action="" method="get">
+        <fieldset>
+            <legend>Formulário de Halloween</legend>
+
+        </fieldset>
+    </form>
 </body>
 </html>
