Base pronta do formulário

--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
     <form action="" method="get">
         <fieldset>
             <legend>Formulário de Halloween</legend>
-
+            <label for="nome">Nome:</label>
+            <input type="text" name="nome">
+            <br>
+            <br>
+            <label for="">Email:</label>
+            <input type="email" name="email">
+            <br>
+            <br>
+            <label for="">Senha:</label>
+            <input type="password" name="senha">
+            <br><br>
+            <button>Enviar</button>
         </fieldset>
     </form>
 </body>
