adding insert to my db

--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<?php
-require_once('inc/config.php');
-?>
 
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -8,11 +5,11 @@ require_once('inc/config.php');
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/styles/style.css">
+    <link type="text/css" rel="stylesheet" href="/assets/styles/style.css">
     <title>Formulário em Dupla</title>
 </head>
 <body>
-    <form action="" method="get">
+    <form action="add_contact.php" method="get">
         <fieldset>
             <legend>Formulário de Halloween</legend>
             <label for="nome">Nome:</label>
@@ -28,7 +25,7 @@ require_once('inc/config.php');
             <br><br>
             <button>Enviar</button>
         </fieldset>
-        < !-- oi migorrrrrrrrrrr <333 -- >
+        <!-- oi migorrrrrrrrrrr <333 -->
     </form>
 </body>
 </html>
