--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="text/css" rel="stylesheet" href="/assets/styles/style.css">
+    <link type="text/css" rel="stylesheet" href="./assets/styles/harry.css")>
+    
     <title>Formulário em Dupla</title>
 </head>
 <body>
