--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <title>Formulário em Dupla</title>
 </head>
 <body>
-    <form action="add_contact.php" method="get">
+    <form action="add_contact.php" method="POST">
         <fieldset>
             <legend>Formulário de Halloween</legend>
             <label for="nome">Nome:</label>
-            <input type="text" name="nome">
+            <input type="text" name="nome" >
             <br>
             <br>
             <label for="">Email:</label>
-            <input type="email" name="email">
+            <input type="email" name="email" >
             <br>
             <br>
             <label for="">Senha:</label>
-            <input type="password" name="senha">
+            <input type="password" name="senha" >
             <br><br>
             <button>Enviar</button>
         </fieldset>
